[X11] Atomically set the horizontal and vertical maximized state

The EWMH spec implements maximized windows with two window state atoms:
_NET_WM_STATE_MAXIMIZED_{VERT,HORZ}.  This gives windows flexibility to be only
horizontally maximized or only vertically maximized, but the common case is to
set both atoms.  Some window managers like xfwm4 do not implement "only
horizontal" or "only vertical" maximized states, so it will ignore requests to
set these states individually.  Instead, apps must set both atoms atomically to
maximize the window.

Window state atoms are set in pairs.  In some cases, Chromium used to maximize
windows by setting
  (_NET_WM_STATE_MAXIMIZED_VERT, None)
  (_NET_WM_STATE_MAXIMIZED_HORZ, None).
This CL changes the request to
  (_NET_WM_STATE_MAXIMIZED_VERT, _NET_WM_STATE_MAXIMIZED_HORZ).

[1] https://specifications.freedesktop.org/wm-spec/1.3/ar01s05.html#idm140238712324208

BUG=882258
R=sky

Change-Id: Id6f4668c4a372dd2f58adc56c9a257168ae37555
Reviewed-on: https://chromium-review.googlesource.com/1220714
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590724}
Former-commit-id: d83ba0d6bbac37dff3db86b6698073e9e9744b37